Name:               salvia-protocol
Version:            0.1.0
Description:        Protocol suite the Salvia webserver, including functionality for URI, HTTP, Cookie and MIME.
Synopsis:           Protocol suite the Salvia webserver, including functionality for URI, HTTP, Cookie and MIME.
Cabal-version:      >= 1.6
Category:           Network, Web, Protocol
License:            BSD3
License-file:       LICENSE
Author:             Sebastiaan Visser
Maintainer:         sfvisser@cs.uu.nl
Build-Type:         Simple

Library
  GHC-Options:      -Wall -fno-warn-orphans
  HS-Source-Dirs:   src

  Build-Depends:    base ==4.2.*,
                    containers,
                    safe,
                    fclabels,
                    split,
                    bimap,
                    bytestring,
                    parsec ==3.0.*,
                    utf8-string

  Exposed-modules:  Network.Protocol.Cookie
                    Network.Protocol.Http
                    Network.Protocol.Http.Data
                    Network.Protocol.Http.Headers
                    Network.Protocol.Http.Parser
                    Network.Protocol.Http.Printer
                    Network.Protocol.Http.Status
                    Network.Protocol.Mime
                    Network.Protocol.Uri
                    Network.Protocol.Uri.Chars
                    Network.Protocol.Uri.Data
                    Network.Protocol.Uri.Encode
                    Network.Protocol.Uri.Parser
                    Network.Protocol.Uri.Path
                    Network.Protocol.Uri.Printer
                    Network.Protocol.Uri.Remap
                    Network.Protocol.Uri.Query

