Name:               salvia-protocol
Version:            1.1.2
Synopsis:           Salvia webserver protocol suite supporting URI, HTTP, Cookie and MIME.
Description:
  Protocol suite for the Salvia webserver, including functionality for URI,
  HTTP, Cookie and MIME.

  This pacakage exposes the datatypes, parsers, pretty printers and some
  utility functions to deal with several web protocols. The /fclabels/ package
  is used to generate labels pointing into the exposed datatypes, allowing to
  easily get, set and modify parts of the structures.

Cabal-version:      >= 1.6
Category:           Network, Web, Protocol
License:            BSD3
License-file:       LICENSE
Author:             Sebastiaan Visser
Maintainer:         haskell@fvisser.nl
Build-Type:         Simple

Flag parsec2
  Description:      Are we using parsec2?
  Default:          False

Library
  GHC-Options:      -Wall -fno-warn-orphans
  HS-Source-Dirs:   src
  If flag(parsec2)
    Build-Depends:  parsec == 2.1.*
    CPP-Options:    -DPARSEC2
  Else
    Build-Depends:  parsec >= 3 && < 3.2

  Build-Depends:    base        >= 4   && < 5
                  , containers  >= 0.2 && < 0.6
                  , safe        >= 0.2 && < 0.4
                  , fclabels    >= 1.1 && < 1.2
                  , split       == 0.1.*
                  , bimap       == 0.2.*
                  , utf8-string == 0.3.*
                  , bytestring  == 0.9.*

  Exposed-modules:  Network.Protocol.Cookie
                    Network.Protocol.Http
                    Network.Protocol.Http.Data
                    Network.Protocol.Http.Headers
                    Network.Protocol.Http.Parser
                    Network.Protocol.Http.Printer
                    Network.Protocol.Http.Status
                    Network.Protocol.Mime
                    Network.Protocol.Uri
                    Network.Protocol.Uri.Chars
                    Network.Protocol.Uri.Data
                    Network.Protocol.Uri.Encode
                    Network.Protocol.Uri.Parser
                    Network.Protocol.Uri.Path
                    Network.Protocol.Uri.Printer
                    Network.Protocol.Uri.Remap
                    Network.Protocol.Uri.Query

